<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/rect_curved_top"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.filter.FilterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/chFree"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chFree"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chPaid"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgCategory"
        style="@style/CustomChip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/chBusiness"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chBusiness"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chDesign"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chDevelopment"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/development" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chFinance"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finance_amp_accounting" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chHealth"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_amp_fitness" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chIT"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_amp_software" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chLifestyle"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifestyle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chMarketing"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marketing" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chOfficeProductivity"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office_productivity" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chPersonalDevelopment"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_development" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chPhotography"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photography_amp_video" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="4"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/apply"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/reset"
            android:textColor="@color/primaryColor"
            app:cornerRadius="10dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>