<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.reemmousa.eduapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_allCoursesFragment"
            app:destination="@id/allCoursesFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.reemmousa.eduapp.ui.wishlist.WishlistFragment"
        android:label="@string/title_Wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.reemmousa.eduapp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/courseDetailsFragment"
        android:name="com.reemmousa.eduapp.ui.courseDetails.CourseDetailsFragment"
        android:label="@string/course_details"
        tools:layout="@layout/fragment_course_details">
        <argument
            android:name="selectedCourse"
            app:argType="com.reemmousa.eduapp.dataStructures.courses.Course" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.reemmousa.eduapp.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
        <argument
            android:name="search_word"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/allCoursesFragment"
        android:name="com.reemmousa.eduapp.ui.allCourses.AllCoursesFragment"
        android:label="@string/all_courses"
        tools:layout="@layout/fragment_all_courses">
        <action
            android:id="@+id/action_allCoursesFragment_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
        <action
            android:id="@+id/action_allCoursesFragment_to_filterFragment"
            app:destination="@id/filterFragment" />
        <argument
            android:name="backFromFilter"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <dialog
        android:id="@+id/filterFragment"
        android:name="com.reemmousa.eduapp.ui.filter.FilterFragment"
        android:label="fragment_filter"
        tools:layout="@layout/fragment_filter" >
        <action
            android:id="@+id/action_filterFragment_to_allCoursesFragment"
            app:destination="@id/allCoursesFragment" />
    </dialog>
</navigation>