<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_E3E2E5"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_E3E2E5"
                tools:context=".ui.home.HomeFragment">

                <View
                    android:id="@+id/cl_top"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/primaryDarkColor"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </View>

                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/what_courses_are_you_nlooking_for"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/searchView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/searchView"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/searchView"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_privacy_policy"
                    app:layout_constraintStart_toStartOf="@+id/tv_privacy_policy"
                    app:layout_constraintTop_toBottomOf="@+id/tv_privacy_policy" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/search_course"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_818181"
                    android:textSize="16sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_search"
                    app:iconTint="@color/grey_818181"
                    app:layout_constraintBottom_toTopOf="@+id/guideline1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_header" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.35" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.27" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.45" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_categories"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline1"
                    tools:listitem="@layout/item_course_category_home" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_all_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/all_courses"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_view_all_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/view_all"
                    android:textColor="@color/grey_818181"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/rv_courses"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_courses"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_all_courses"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/item_course_home" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>